# website-hakyll

./: .gitignore  about.md  index.md  misc.md  references.md  site.hs  topics.md  website-hakyll.cabal
.github/workflows/: publish.yaml
css/: default.css
posts/: 2015-08-12-test.md  2020-05-27-basel.md  2020-05-29-zeta.md  2020-06-03-memo.md  2020-06-05-bertrand.md  2020-06-12-regression.md  2020-06-17-root.md  2020-06-19-complex_regression.md  2020-07-12-fib_power.md  2022-05-15-apl.md  2024-04-26-hakyll.md  2024-04-28-synacor.md  2024-05-09-quasiquotation.md  2024-05-30-ssft24.md  2024-08-04-univalence.md  2024-08-12-univalence.md  2024-11-25-twitter.md  2025-03-11-candidacy.md  2025-05-10-formalized_lambda_calculus.md  2025-06-28-lean_metaprogramming.md
templates/: default.html  post-list.html  post.html  tag-list.html
