name:               website-hakyll
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.16.*
                  , containers == 0.6.*
                  , pandoc >= 3.1.13 && < 3.2
                  , skylighting-core >= 0.14.1 && < 0.15
                  , skylighting-format-blaze-html >= 0.1.1 && < 0.2
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
